Sorta color implementation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hbs": "^4.0.1",
     "image-to-ascii": "^3.0.11",
     "is-url": "^1.2.4",
+    "rimraf": "^2.6.2",
     "youtube-validate": "^1.2.4",
     "ytdl-core": "^0.28.0"
   }
